// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poll list (form) should match snapshot (authenticated) 1`] = `
<div
  className="u-margin-half"
>
  <button
    className="c-poll-options__option u-margin-half u-margin-right qa-option-vote"
    key="0-730"
    onClick={[Function]}
  >
    <div
      className="c-poll-options__layout"
    >
      <span
        className="c-poll-options__remove qa-option-remove"
        onClick={[Function]}
      >
        <i
          className="fa fa-close"
        />
      </span>
      <span>
        Option A
      </span>
    </div>
  </button>
</div>
`;

exports[`poll list (form) should match snapshot (default) 1`] = `
<div
  className="u-margin-half--negative"
>
  <button
    className="c-poll-options__option u-margin-half u-margin-right qa-option-vote"
    key="0-730"
    onClick={[Function]}
  >
    <div
      className="c-poll-options__layout"
    >
      <span
        className="c-poll-options__remove qa-option-remove"
        onClick={[Function]}
      >
        <i
          className="fa fa-close"
        />
      </span>
      <span>
        Option A
      </span>
    </div>
  </button>
</div>
`;

exports[`poll list (view) should match snapshot (authenticated) 1`] = `
<div
  className="u-margin-half"
>
  <button
    className="c-poll-options__option u-margin-half u-margin-right qa-option-vote"
    key="0-730"
    onClick={[Function]}
  >
    <div
      className="c-poll-options__layout"
    >
      <span
        className="c-poll-options__remove qa-option-remove"
        onClick={[Function]}
      >
        <i
          className="fa fa-close"
        />
      </span>
      <span>
        Option A
      </span>
    </div>
  </button>
</div>
`;

exports[`poll list (view) should match snapshot (default) 1`] = `
<div
  className="u-margin-half--negative"
>
  <button
    className="c-poll-options__option u-margin-half u-margin-right qa-option-vote"
    key="0-730"
    onClick={[Function]}
  >
    <div
      className="c-poll-options__layout"
    >
      <svg
        className="c-poll-options__color-box"
      >
        <rect
          className="c-poll-options__color-icon"
          fill="rgba(0, 0, 0, 0.75)"
        />
      </svg>
      <span>
        Option A
      </span>
    </div>
  </button>
</div>
`;

exports[`poll list (view) should match snapshot (options, created option) 1`] = `
<div
  className="u-margin-half"
>
  <button
    className="c-poll-options__option u-margin-half u-margin-right qa-option-vote"
    key="0-730"
    onClick={[Function]}
  >
    <div
      className="c-poll-options__layout"
    >
      <span
        className="c-poll-options__remove qa-option-remove"
        onClick={[Function]}
      >
        <i
          className="fa fa-close"
        />
      </span>
      <span>
        Option A
      </span>
    </div>
  </button>
</div>
`;

exports[`poll list (view) should match snapshot (options, created poll) 1`] = `
<div
  className="u-margin-half"
>
  <button
    className="c-poll-options__option u-margin-half u-margin-right qa-option-vote"
    key="0-730"
    onClick={[Function]}
  >
    <div
      className="c-poll-options__layout"
    >
      <span
        className="c-poll-options__remove qa-option-remove"
        onClick={[Function]}
      >
        <i
          className="fa fa-close"
        />
      </span>
      <span>
        Option A
      </span>
    </div>
  </button>
</div>
`;
